# God-of-War-Ragnarok-Tweaks

./: CMakeLists.txt  dependencies.md
.github/workflows/: msbuild.yml  readme.md
include/: stdafx.h
source/GoWR.Tweaks/: CMakeLists.txt  dllmain.cpp
